# physical-ai-robotics

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  chatkit_notes.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yaml
.husky/: pre-commit
.specify/memory/: constitution.md
backend/: .ruff.toml  API_ENDPOINTS.md  Dockerfile  Procfile  README.md  THRESHOLD_OPTIMIZATION_REPORT.md  alembic.ini  check_lessons.py  diagnose_rag.py  direct_test.py  import_docs.py  pyproject.toml  requirements.txt  test_chatkit_rag.py  test_rag_search.py  test_signup.py  test_signup_payload.json  threshold_optimization.py  verify_rag.py
backend/src/: config.py  dependencies.py  main.py
backend/src/api/v1/: __init__.py  chatbot_queries.py  chatkit.py  lessons.py  modules.py  openapi_spec.py  personalization.py  translations.py  user_progress.py  users.py
backend/src/core/: auth.py  security.py
backend/src/crud/: __init__.py  chatbot_query.py  content_translation.py  lesson.py  lesson_embedding.py  module.py  user.py  user_progress.py
backend/src/db/: base.py  session.py
backend/src/db/alembic/: env.py
backend/src/middleware/: auth_middleware.py
backend/src/models/: __init__.py  chatbot_query.py  content_translation.py  lesson.py  lesson_embedding.py  module.py  user.py  user_progress.py
backend/src/schemas/: auth.py  chatbot.py  chatbot_query.py  content_translation.py  lesson.py  lesson_embedding.py  module.py  personalization.py  user.py  user_progress.py
backend/src/services/: auth_service.py  chatbot.py  content.py  personalization.py  qdrant_client.py  translation.py
backend/src/utils/: embeddings.py  llm_integrations.py
backend/tests/: test_api_endpoints.py
backend/tests/integration/: test_full_workflow.py
frontend/: .eslintrc.json  .prettierrc.json  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
frontend/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
frontend/blog/: 2024-01-01-welcome.md  2025-01-01-welcome.md  authors.yml
frontend/docs/: intro.md
frontend/docs/advanced/: _category_.json  contributing.md  faq.md  humanoid-control.md  manipulation.md  multi-robot.md  navigation.md
frontend/docs/ai-brain/: _category_.json  intro.md  perception.md  planning.md
frontend/docs/digital-twin/: _category_.json  intro.md  modeling.md  simulation-platforms.md
frontend/docs/ros2/: _category_.json  architecture.md  intro.md  nodes.md  services.md  topics.md
frontend/docs/vla/: _category_.json  architectures.md  implementation.md  intro.md
specs/001-textbook-spec/: plan.md  spec.md  tasks.md
(+60 files in other folders)
